--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 :root {
-  --ochre: '#D37715';
-  --amber: '#FFA019';
-  --white: '#FFFFFF';
-  --black: '#000000';
-  --coolgraylight: '#3E404A';
-  --coolgraymid: '#272A37';
-  --coolgraydark: '#22242E';
-  --lightoutline: '#D4D6DD';
-  --lightbg: '#E9EAEE';
-  --lightaccentbg: '#F2F3F7';
-  --burgundy: '#C70039';
-  --viridian: '#1f885f';
-  --violet: '#4f1f88';
+  --ochre: #D37715;
+  --amber: #FFA019;
+  --white: #FFFFFF;
+  --black: #000000;
+  --coolgraylight: #3E404A;
+  --coolgraymid: #272A37;
+  --coolgraydark: #22242E;
+  --lightoutline: #D4D6DD;
+  --lightbg: #E9EAEE;
+  --lightaccentbg: #F2F3F7;
+  --burgundy: #C70039;
+  --viridian: #1f885f;
+  --violet: #4f1f88;
 }
 
 .ochre {
